“Open Connections window” drop down when there is no connection Set default values for ZigZag indicators Remove Connection Delay notification Account name hiding not working on chart. Chart setting -> Value scale -> Price pixel alignment fix

--- a/projects/chart/src/chart-settings/chart-settings.component.scss
+++ b/projects/chart/src/chart-settings/chart-settings.component.scss
@@ -157,6 +157,9 @@
     grid-column-gap: 5px;
   }
 
+  .pixel-price-rows{
+    margin-top: -20px;
+  }
   .order-area-rows {
     grid-template-columns: 50% 2fr 3fr;
     grid-column-gap: 5px;
